Fix overflow problem

--- a/resources/nightlight-public/paren-soup-dark.css
+++ b/resources/nightlight-public/paren-soup-dark.css
@@ -62,7 +62,6 @@ button {
 	outline: 0px solid transparent;
 	white-space: pre;
 	word-wrap: normal;
-	overflow: scroll;
 }
 
 .paren-soup .content .symbol {
